files/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prod-http-route
  namespace: hawk
spec:
  parentRefs:
    - name: orca-infer-gateway
  hostnames:
    - orca-infer.ai
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/rag-go
      backendRefs:
        - name: prod-orca-svc
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /q1
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: qdrant-service
          port: 6333
    - matches:
        - path:
            type: PathPrefix
            value: /ui
      backendRefs:
        - name: prod-mini-ui-svc
          port: 80
